--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -1,4 +1,4 @@
-@import "animate.css";
+@import "animate.scss";
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,em,input,textarea,p,blockquote,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
     margin:0;
     padding:0;
@@ -117,4 +117,20 @@ ins,a {
 [v-cloak] {
     display: none;
 }
+.ant-table-body{
+    &::-webkit-scrollbar {
+      height: 12px;
+    }
+    &::-webkit-scrollbar-thumb {
+      border-radius: 2px;
+      -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+      // background: #00aaff;
+      background: #eff1f7;
+    }
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: 0;
+      border-radius: 0;
+      background: #f6f8ff;
+    }
+  }
 
